--- a/src/posts/my-fourth-post/index.mdx
+++ b/src/posts/my-fourth-post/index.mdx
@@ -3,7 +3,7 @@ title: My Fourth Post! I hope you are having fun!
 slug: my-fourth-post
 date: 23-11-2020
 featureImage: table.png
-excerpt: This is definitely another
+excerpt: This is definitely anotherThis is definitely anotherThis is definitely anotherThis is definitely anotherThis is definitely anotherThis is definitely anotherThis is definitely anotherThis is definitely anotherThis is definitely anotherThis is definitely anotherThis is definitely anotherThis is definitely another
 ---
 
 # Heading 1
