--- a/src/posts/my-second-post/index.mdx
+++ b/src/posts/my-second-post/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: My second Post! Hello World!
 slug: my-second-post
-date: 21-11-2020
+date: '2020-12-02'
 featureImage: flowers.jpeg
 excerpt: second is always unique
 ---
