--- a/src/posts/my-fourth-post/index.mdx
+++ b/src/posts/my-fourth-post/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: My Fourth Post! I hope you are having fun!
 slug: my-fourth-post
-date: 23-11-2020
+date: '2020-12-05'
 featureImage: table.png
 tags: beginners, css
 excerpt: This is definitely anotherThis is definitely another. This is definitely anotherThis is definitely anotherThis is definitely anotherThis is definitely anotherThis is definitely anotherThis is definitely another.This is definitely another. This is definitely anotherThis is definitely anotherThis is definitely anotherTh
