--- a/src/posts/my-third-post/index.mdx
+++ b/src/posts/my-third-post/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: My third Post! Hello World!
 slug: my-third-post
-date: 20-11-2020
+date: '2020-11-30'
 featureImage: pass.jpeg
 excerpt: hi babbbbbeeeeee
 ---
