--- a/src/posts/my-second-post/index.mdx
+++ b/src/posts/my-second-post/index.mdx
@@ -3,6 +3,7 @@ title: My second Post! Hello World!
 slug: my-second-post
 date: '2020-12-02'
 featureImage: flowers.jpeg
+tags: react, html
 excerpt: second is always unique
 ---
 
