--- a/src/posts/my-third-post/index.mdx
+++ b/src/posts/my-third-post/index.mdx
@@ -3,6 +3,7 @@ title: My third Post! Hello World!
 slug: my-third-post
 date: '2020-11-30'
 featureImage: pass.jpeg
+tags: beginners, accessibility
 excerpt: hi babbbbbeeeeee
 ---
 
