added a new plugin

--- a/src/posts/my-fourth-post/index.mdx
+++ b/src/posts/my-fourth-post/index.mdx
@@ -1,10 +1,10 @@
 ---
-title: My Fourth Post! I hope you are having fun!
-slug: my-fourth-post
-date: '2020-12-05'
+title: Blur scrolling-div content behind an element using pure CSS
+slug: blur-scrolling-div-content
+date: '2020-12-08'
 featureImage: table.png
-tags: beginners, css
-excerpt: This is definitely anotherThis is definitely another. This is definitely anotherThis is definitely anotherThis is definitely anotherThis is definitely anotherThis is definitely anotherThis is definitely another.This is definitely another. This is definitely anotherThis is definitely anotherThis is definitely anotherTh
+tags: beginners, css, html
+excerpt: Wonder how to achieve the blurring of the scrolling div content behind an element?
 ---
 
 
