--- a/src/posts/blur-scrolling-div-content/index.mdx
+++ b/src/posts/blur-scrolling-div-content/index.mdx
@@ -3,7 +3,7 @@ title: Blur scrolling-div content behind an element using pure CSS
 slug: blur-scrolling-div-content
 date: '2020-12-08'
 featureImage: table.png
-tags: beginners, css, html
+tags: css, html
 excerpt: Wonder how to achieve the blurring of the scrolling div content behind an element?
 ---
 
