--- a/src/posts/difference-between-a-library-and-a-framework/index.mdx
+++ b/src/posts/difference-between-a-library-and-a-framework/index.mdx
@@ -3,7 +3,7 @@ title: The Difference between a Library and a Framework
 slug: difference-between-a-library-and-a-framework
 date: "2020-12-19"
 featureImage: library-and-framework.png
-tags: javascript, react, framework
+tags: javascript, react
 excerpt: A library and a Framework are both reusable code written to solve problems. To know the difference between a Library and a Framework, we have to first understand what they are individually.
 ---
 
