updated images and favicon

--- a/src/posts/faster-loading-webpages-with-webp-images/index.mdx
+++ b/src/posts/faster-loading-webpages-with-webp-images/index.mdx
@@ -2,7 +2,7 @@
 title: Faster loading webpages with webP images
 slug: faster-loading-webpages-with-webp-images
 date: "2020-12-08"
-featureImage: beautiful.jpeg
+featureImage: fasterloadingimage.png
 tags: javascript, react, css
 excerpt: Have you ever wondered why your website takes forever to load? It is probably because you are using too large images.
 ---
