update on seo file

--- a/src/posts/faster-loading-webpages-with-webp-images/index.mdx
+++ b/src/posts/faster-loading-webpages-with-webp-images/index.mdx
@@ -4,6 +4,7 @@ slug: faster-loading-webpages-with-webp-images
 date: "2020-12-08"
 featureImage: fasterloadingimage.png
 tags: javascript, react, css
+keywords: images, webp, website, performance, fast-loading
 excerpt: Have you ever wondered why your website takes forever to load? It is probably because you are using too large images.
 ---
 
