--- a/src/posts/mvc-model-view-controller/index.mdx
+++ b/src/posts/mvc-model-view-controller/index.mdx
@@ -11,7 +11,8 @@ MVC is a popular way of organizing your code based on concerns. This concept was
 1. One holds data. (Model Component)
 2. One makes your app looks nice, hence in charge of the looks. (View Component)
 3. One controls how the app functions. (Controller Component)
-4. Now, let's talk more about each of these components:
+
+Now, let's talk more about each of these components:
 
 ### Model Component
 
@@ -27,11 +28,11 @@ The Controller component serves as an link/interface between the user and the sy
 
 By using the MVC pattern, it makes you able to reuse your code easily, and also allow other developers to readily understand your code. Though it will lead to you having to create more files, this is a necessary evil.
 
-## A Practical Example
+## A PRACTICAL EXAMPLE
 
 Let's consider a **To-do list application**. The main concept of the app is to allow users to write tasks, organize them into lists, mark them as "completed" when the task is done.
 
-####The MVC Concept
+#### The MVC Concept
 **Model Component**: Since there will most likely be no previously documented to-do, the Model might initially just define what a "task" is, and what a "list" is for the app.
 
 **View Component**: This will be concerned with the UI, that is, how the app will look like, what the user sees, what he needs to click. Hence, generically, it should contain a section for the user to type in a task/to-do, a section that will show the list of already written to-do. The view component will determine what color you want a task marked "complete" will look like, it will determine the font you will like to use, where you want to place the "add to-do" button, where you want the to-do list to be, and so on.
