--- a/src/posts/blur-scrolling-div-content/index.mdx
+++ b/src/posts/blur-scrolling-div-content/index.mdx
@@ -36,7 +36,8 @@ body {
   position: fixed;
   top: 30%;
   left: 40%;
-  color: #333;
+  color: ${props=>props.theme.paragraph}
+;
   font-weight: bolder;
   width: 20%;
   padding: 1rem;
