--- a/src/posts/web-accessibility-building-website-for everyone/index.mdx
+++ b/src/posts/web-accessibility-building-website-for everyone/index.mdx
@@ -24,7 +24,7 @@ Now how do we make that happen? Web accessibility comes to the rescue.
 
 Accessibility is being able to obtain and/or use. It is the quality of being easily understood and appreciated. Web accessibility is the practice that ensures that there are no barriers that prevent interaction with/access to websites by people with disabilities.
 
-WEB ACCESSIBILITY TIPS
+## WEB ACCESSIBILITY TIPS
 
 ### 1. Website should be keyboard friendly.
 
